# eventdbx-rs

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: publish.yml
proto/: control.capnp
src/: client.rs  config.rs  control_capnp.rs  error.rs  lib.rs  main.rs  noise.rs  schema_capnp.rs  types.rs
tests/: client_config.rs  client_regression.rs
